src/objects/User_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Notification__c</fullName>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>User Notifications</relationshipLabel>
        <relationshipName>User_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Displayed</fullName>
                </value>
                <value>
                    <fullName>Openen</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Notification</label>
    <nameField>
        <displayFormat>USRNOT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>